--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,7 +32,6 @@ body {
   }
 }
 
-
 .mask1 {
   -webkit-mask-image: linear-gradient(to bottom, transparent 15%, black 100%);
   mask-image: linear-gradient(to bottom, transparent 15%, black 100%);
@@ -41,7 +40,20 @@ body {
   -webkit-mask-image: linear-gradient(to top, transparent 15%, black 100%);
   mask-image: linear-gradient(to top, transparent 15%, black 100%);
 }
+.mask3 {
+  -webkit-mask-image: linear-gradient(
+    to bottom,
+    transparent 50%,
+    rgba(0, 0, 0, 0.445) 100%
+  );
+  mask-image: linear-gradient(
+    to bottom,
+    transparent 50%,
+    rgba(0, 0, 0, 0.445) 100%
+  );
+  opacity: 0.1!;
+}
 
-.blue-gradient{
-  background: linear-gradient(111deg, #1A2331 1.79%, #0A1423 74.32%);
+.blue-gradient {
+  background: linear-gradient(111deg, #1a2331 1.79%, #0a1423 74.32%);
 }
